# fluff

./: .clippy.toml  Cargo.toml  README.md
src/: lib.rs  vector2.rs  vector3.rs  vector4.rs
src/matrix/: matrix2.rs  matrix3.rs  matrix4.rs  mod.rs
src/point/: mod.rs  point2.rs  point3.rs  point4.rs
src/vector/: mod.rs  vector2.rs  vector3.rs  vector4.rs
tests/: lib.rs
tests/matrix/: matrix2.rs  matrix3.rs  matrix4.rs  mod.rs
tests/point/: mod.rs  point2.rs  point3.rs  point4.rs
tests/vector/: mod.rs  vector2.rs  vector3.rs  vector4.rs
tests/vectors/: mod.rs
