[package]
name = "fluff"
version = "0.1.1"
authors = ["june wilde <jewilde@rosegardencult.com>"]
description = "mathematics for warmth"
license = "MPL-2.0"
keywords = ["warmth"]
homepage = "https://github.com/rosegardencult/fluff"
repository = "https://github.com/rosegardencult/fluff"
readme = "README.md"
edition = "2018"

[dependencies]
num = "0.2.1"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]
